--- a/for loop excercise.ipynb
+++ b/for loop excercise.ipynb
@@ -207,8 +207,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "35bf14f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [64, 34, 25, 12, 22, 11, 90]\n",
+      "Sorted list: [11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#5\n",
+    "\n",
+    "def bubble_sort(arr):\n",
+    "    n = len(arr)\n",
+    "    for i in range(n):\n",
+    "        \n",
+    "        for j in range(0, n-i-1):\n",
+    "    \n",
+    "            if arr[j] > arr[j+1]:\n",
+    "                arr[j], arr[j+1] = arr[j+1], arr[j\n",
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    my_list = [64, 34, 25, 12, 22, 11, 90]\n",
+    "    \n",
+    "    print(\"Original list:\", my_list)\n",
+    "    \n",
+    "    \n",
+    "    bubble_sort(my_list)\n",
+    "    \n",
+    "    print(\"Sorted list:\", my_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b9308d34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element 10 is present at index 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def binary_search(arr, target):\n",
+    "    left, right = 0, len(arr) - 1\n",
+    "    \n",
+    "    while left <= right:\n",
+    "        mid = (left + right) // 2\n",
+    "        \n",
+    "    \n",
+    "        if arr[mid] == target:\n",
+    "            return mid\n",
+    "        elif arr[mid] < target:\n",
+    "            left = mid + 1\n",
+    "        \n",
+    "        \n",
+    "        else:\n",
+    "            right = mid - 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    my_array = [2, 3, 4, 10, 40, 50, 60, 70, 80, 90]\n",
+    "    \n",
+    "    \n",
+    "    target_element = 10\n",
+    "    \n",
+    "    \n",
+    "    result = binary_search(my_array, target_element)\n",
+    "    \n",
+    "    if result != -1:\n",
+    "        print(f\"Element {target_element} is present at index {result}\")\n",
+    "    else:\n",
+    "        print(f\"Element {target_element} is not present in the array\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "84a03625",
+   "id": "2e4a5319",
    "metadata": {},
    "outputs": [],
    "source": []
